# Codex-Manager

./: .gitignore  AGENTS.md  Cargo.toml  README.en.md  README.md
.beads/: metadata.json
apps/: index.html
apps/src/: api.js  main.js
apps/src-tauri/src/: lib.rs
apps/src-tauri/src/app_storage/: env.rs  import.rs  migration.rs  mod.rs
apps/src-tauri/src/commands/: apikey.rs  registry.rs
apps/src-tauri/src/rpc_client/: transport.rs
apps/src/api/: account-client.js  service-client.js
apps/src/api/tests/: account-client.test.js
apps/src/runtime/: app-runtime.js  app-shell.js
apps/src/services/: management-actions.js
apps/src/services/management/: account-actions.js
apps/src/ui/: dom.js  env-overrides.js
apps/src/views/: render-actions.js
apps/src/views/event-bindings/: modal-actions.js
apps/src/views/requestlogs/: virtual-list.js
apps_new/: AGENTS.md  package.json  pnpm-lock.yaml
apps_new/src/app/: page.tsx
apps_new/src/app/settings/: page.tsx
apps_new/src/components/: providers.tsx
apps_new/src/components/layout/: app-bootstrap.tsx  sidebar.tsx
apps_new/src/hooks/: useAccounts.ts
crates/core/src/rpc/: types.rs
crates/core/tests/: storage.rs
crates/hub/: Cargo.toml
crates/hub/assets/: index.html
crates/hub/src/: lib.rs  main.rs
crates/service/: Cargo.toml
crates/service/src/: lib.rs  startup_snapshot.rs
crates/service/tests/: rpc.rs
crates/web/: build.rs
crates/web/src/: auth.rs  embedded_ui.rs  main.rs
docker/: Dockerfile.hub  Dockerfile.service  Dockerfile.web
docs/report/: 20260309195355187_环境变量与运行配置说明.md
(+65 files in other folders)
