[package]
name = "codexmanager-hub"
version.workspace = true
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tower-http = { version = "0.6", features = ["fs"] }
rand = "0.8"
